@@ -1,6 +1,17 @@
 FlightPath 5.x Changelog
 ========================
 
+2017-06-19
+  Tweaked the reduce_whitespace function to make it slightly smarter.
+  
+  Working on new FormAPI form for editing degrees.
+  
+
+2017-06-17
+  Fixed bug where remainder hours on a split substitution were showing as the full hours
+  in Excess credit.
+
+
 2017-04-21
   Added a new behavior to when FlightPath saves advising session from POST.  Instead of
   simply continuing execution, it can now reload the page via fp_goto().  This prevents
